<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.pavani.bakingapp.RecipeDetailFragment">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        android:id="@+id/recipeDetails_list"
        android:name="com.example.pavani.bakingapp.RecipeDetailFragment"
        tools:listitem="@layout/recipe_list_content"/>

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:visibility="gone"
        android:id="@+id/video_view"/>
   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="ThumbNail:"
            style="?android:attr/textAppearanceLarge"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/thumb_nail_image"
            android:src="@drawable/error"
            />
    </LinearLayout>
-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/stepList">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textIsSelectable="true"
                android:id="@+id/recipe_detail"
                style="?android:attr/textAppearanceLarge"/>

        </LinearLayout>

</LinearLayout>
