<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/content"
    android:gravity="center_vertical"
    android:paddingTop="8dp"
    android:paddingLeft="16dp"
    android:paddingBottom="8dp"
    android:paddingRight="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:textAppearance="?android:attr/textAppearanceMedium"/>